--- a/stylestest.css
+++ b/stylestest.css
@@ -162,174 +162,153 @@ header {
   margin-bottom: 20px;
 }
 
-/*Body- Hébergements*/
-.hébergements {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.héberg {
+/* Hébergements*/
+.hostingPopular,
+.hostingMain {
   background-color: #f2f2f2;
-  width: 55%;
-  border-radius: 20px;
-  padding: 30px 30px 0px 30px;
-  margin-bottom: 45px;
-  margin-left: 50px;
+  border-radius: 1.5rem;
+  padding: 2.5rem;
+}
+.hosting {
+  display: grid;
+  column-gap: 3rem;
+  grid-template-columns: 6fr 3fr;
+  margin-left:50px;
+  margin-right: 50px;
+}
+.hostingMain {
   display: grid;
   column-gap: 2rem;
   row-gap: 2rem;
 }
-.héberg_title {
-  font-weight: bold;
-  color: black;
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-bottom: 0;
-  font-size: 1.4em;
+.hostingMainHeader {
   grid-column: 1/-1;
 }
-.hotelcard {
-  border: solid 5px white;
-  border-radius: 20px;
-  margin-top: 20px;
-  box-shadow: 1px 1px 5px#c4c4c9;
+.hostingMainHeaderTitle {
+  margin: 0;
+  width: 100%;
+}
+.hostingMainCard {
+  background-color: white;
+  padding: 0.375rem;
+  border-radius: 1.25rem;
+  box-shadow: 0 0 10px #0000002e;
   transition-duration: 0.1s;
-  overflow: hidden;
+  cursor: pointer;
+  box-sizing: border-box;
+  height: 100%;
+}
+.hostingMainCard:hover {
+  transform: scale(1.02);
+}
+.hostingMainCardFigure {
+  margin: 0;
+}
+.hostingMainCardFigureImg {
+  height: 7rem;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100%;
+  max-height: 100%;
+  border-radius: 1rem 1rem 0 0;
+}
+.hostingMainCardFigureCaptionTitle {
+  margin: 0.25rem 0.75rem 0 0.75rem;
+}
+.hostingMainCardDesc {
+  margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+}
+.hostingMainCardDescPrice {
+  font-weight: bold;
+}
+.hostingMainCardGrade {
+  margin: 0 0.75rem 0.25rem 0.75rem;
+}
+.hostingMainCardGradeIcon[data-active="true"] {
+  color: #0065fc;
+}
+.hostingMainCardGradeIcon[data-active="false"] {
+  color: #d9d9d9;
+}
+.hostingMainViewmore {
+  padding-top: 7px;
+  padding-bottom: 7px;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+@media (min-width: 925px) {
+  .hostingMain {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/*Populaires*/
+.hostingPopular {
+  display: grid;
+  row-gap: 2rem;
+  align-items: start;
+  grid-template-rows: auto repeat(3, 1fr);
+}
+.hostingPopularTitle {
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  display: flex;
+  justify-content: space-between;
+}
+.hostingPopularWrapcontent {
+  display: flex;
+  align-items: stretch;
+  height: 100%;
+  overflow: auto;
+}
+.hostingPopularWrapcontentWrapimg {
+  position: relative;
+  min-height: 100%;
+  width: 37%;
+  min-width: 37%;
+  max-width: 37%;
+}
+.hostingPopularWrapcontentWrapimgImg {
+  border-radius: 1rem 0 0 1rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hostingPopularWrapcontentContent {
   display: flex;
   flex-direction: column;
 }
-.hotel_texte {
-  padding: 0.8rem 1rem;
-  font-size: 100%;
-  background-color: white;
-  margin: 0;
-}
-.hotelcard:hover {
-  transform: scale(1.02);
-}
-.hébergcardimg {
-  position: relative;
+.hostingPopularWrapcontentContentWhitespace {
   flex: 1;
 }
-.hotel_img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.hostingPopularhostingMainCard {
+  height: 8.75rem;
 }
 
-@media (min-width: 1100px) {
-  .héberg {
-    width: 100%;
-    grid-template-columns: auto 15rem 15rem 15rem auto;
-    grid-template-rows: auto 15rem 15rem auto;
+@media (max-width: 1440px) {
+  .hosting {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
   }
-  .hotelcard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
+  .hostingPopular {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 10rem;
+    column-gap: 2rem;
   }
-  .hotelcard2 {
-    grid-row: 2/2;
-    grid-column: 3/3;
-  }
-  .hotelcard3 {
-    grid-row: 2/2;
-    grid-column: 4/4;
-  }
-  .hotelcard4 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .hotelcard5 {
-    grid-row: 3/3;
-    grid-column: 3/3;
-  }
-  .hotelcard6 {
-    grid-row: 3/3;
-    grid-column: 4/4;
+  .hostingPopularTitle {
+    grid-column: 1/-1;
   }
 }
-.héberg_bouton {
-  grid-column: 1/-1;
-  grid-row: 4/4;
-  font-size: 1.1em;
-  font-weight: bold;
-  margin-bottom: 7%;
-  margin-left: 5%;
-}
-/*Populaires*/
-.populaires {
-  background-color: #f2f2f2;
-  width: 30%;
-  border-radius: 20px;
-  margin: 0px 50px 45px 50px;
-  padding: 30px 20px 30px 20px;
-  display: grid;
-  row-gap: 2rem;
-  column-gap: 2rem;
-  overflow: hidden;
-}
-.entete {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  padding-left: 15px;
-  padding-right: 30px;
-  grid-column: 1/-1;
-}
-.entete .fas {
-  font-size: 1.5em;
-}
-.populairescard {
-  border: solid 5px white;
-  border-radius: 20px;
-  margin: 0;
-  box-shadow: 1px 1px 5px#c4c4c9;
-  transition-duration: 0.1s;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-}
-.populairescardimg {
-  position: relative;
-  flex: 1;
-}
-.populaires_img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.populaires_texte {
-  padding: 0.8rem 1rem;
-  font-size: 100%;
-  background-color: white;
-  margin: 0;
-}
-.populaires:hover {
-  transform: scale(1.02);
+@media (max-width: 1100px) {
+  .hostingPopular {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto repeat(3, 9rem);
+  }
 }
 
-@media (min-width: 1100px) {
-  .populaires {
-    width: 100%;
-    grid-template-columns: auto 20rem auto;
-    grid-template-rows: auto 10rem 10rem 10rem auto;
-  }
-  .populairescard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
-  }
-  .populairescard2 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .populairescard3 {
-    grid-row: 4/4;
-    grid-column: 2/2;
-  }
-}
 /*Activités*/
 .activity {
   display: grid;
@@ -471,154 +450,16 @@ footer {
   }
 
   /*Body- Hébergements*/
-  .hébergements {
-    display: flex;
-    flex-direction: column-reverse;
-    width: 100%;
+  @media (max-width: 1100px) and (min-width: 650px) {
+    .hostingMain {
+      grid-template-columns: 1fr 1fr;
+    }
   }
-  .héberg {
-    background-color: white;
-    width: 100%;
-    padding: 0;
-    margin: 0px;
-
-    display: grid;
-    column-gap: 3rem;
-    row-gap: 2rem;
+  @media (min-width: 925px) {
+    .hostingMain {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
-
-  .héberg_title {
-    font-weight: bold;
-    color: black;
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-bottom: 0;
-    font-size: 1.7em;
-    grid-column: 1/-1;
-  }
-  .hotelcard {
-    border: solid 5px white;
-    border-radius: 20px;
-    margin-top: 20px;
-    box-shadow: 1px 1px 5px#c4c4c9;
-    transition-duration: 0.1s;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-  }
-  .hotel_texte {
-    padding: 0.8rem 1rem;
-    font-size: 100%;
-    background-color: white;
-    margin: 0;
-  }
-  .hotelcard:hover {
-    transform: scale(1.02);
-  }
-  .hébergcardimg {
-    position: relative;
-    flex: 1;
-  }
-  .hotel_img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .héberg {
-    width: 100%;
-    grid-template-columns: auto 12rem 12rem 12rem auto;
-    grid-template-rows: auto 13rem 13rem auto;
-  }
-  .hotelcard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
-  }
-  .hotelcard2 {
-    grid-row: 2/2;
-    grid-column: 3/3;
-  }
-  .hotelcard3 {
-    grid-row: 2/2;
-    grid-column: 4/4;
-  }
-  .hotelcard4 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .hotelcard5 {
-    grid-row: 3/3;
-    grid-column: 3/3;
-  }
-  .hotelcard6 {
-    grid-row: 3/3;
-    grid-column: 4/4;
-  }
-
-  .héberg_bouton {
-    grid-column: 1/-1;
-    grid-row: 4/4;
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-bottom: 7%;
-    margin-left: 7%;
-  }
-
-  /*Populaires*/
-  .populaires {
-    background-color: #f2f2f2;
-    width: 100%;
-    border-radius: 0px;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    row-gap: 2rem;
-    column-gap: 3rem;
-    overflow: hidden;
-  }
-  .entete {
-    padding-top: 30px;
-    padding-left: 60px;
-    padding-right: 60px;
-    font-size: 1.2em;
-  }
-  .entete .fas {
-    font-size: 1.5em;
-  }
-  .populairescard {
-    border: solid 5px white;
-    border-radius: 20px;
-    margin: 10px 0px 10px 0px;
-    box-shadow: 1px 1px 5px#c4c4c9;
-    transition-duration: 0.1s;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-  }
-  .populaires_texte {
-    padding: 2rem 3rem;
-    font-size: 100%;
-    background-color: white;
-    margin: 0;
-  }
-  .populaires {
-    width: 100%;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto 15rem 15rem 15rem auto;
-  }
-  .populairescard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
-  }
-  .populairescard2 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .populairescard3 {
-    grid-row: 4/4;
-    grid-column: 2/2;
-  }
-
   /*Activités*/
   .activityTitle {
     grid-column: 1/-1;
@@ -662,6 +503,7 @@ footer {
     padding: 50px 50px 50px 50px;
   }
 }
+
 /*Version mobile*/
 @media screen and (min-width: 300px) and (max-width: 730px) {
   header {
@@ -831,111 +673,77 @@ footer {
   .filtre:hover {
     background-color: #deebff;
   }
-  /*Body- Hébergements*/
-  .hébergements {
+  .hosting {
     display: flex;
+    flex-direction: column-reverse;
     justify-content: space-between;
-    flex-flow: column-reverse wrap;
-    align-items: center;
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
   }
-  .héberg {
-    background-color: white;
-    width: 100%;
-    border-radius: 0px;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    column-gap: 1rem;
+  .hosting{
+    margin-left: 0;
+    margin-right: 0;
+    width:100%;
+  }
+  /*Body- Hébergements*/
+  @media (max-width: 650px) {
+    .hostingMain {
+      grid-template-columns: 1fr;
+    }
+  }
+.hostingMain {
+  background-color: white;
+  padding: 0;
+  margin: 1rem;
+}
+
+.hostingMainViewmore {
+  margin-left: 5px;
+  font-size: 1.15rem;
+}
+
+/*Populaires*/
+.hostingPopular {
+  display: grid;
+  row-gap: 1rem;
+  align-items: start;
+  grid-template-rows: repeat(3, 1fr);
+  border-radius: 0;
+  padding-left:1rem;
+  padding-right: 1rem;
+}
+
+.hostingPopularWrapcontentWrapimg {
+  position: relative;
+  min-height: 100%;
+  width: 39%;
+  min-width: 39%;
+  max-width: 39%;
+}
+
+@media (max-width: 1440px) {
+  .hosting {
+    grid-template-columns: 1fr;
     row-gap: 2rem;
   }
-  .hotelcard {
-    margin-top: 0px;
+  .hostingPopular {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 10rem;
+    column-gap: 2rem;
   }
-  .héberg {
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto 13rem 13rem 13rem 13rem 13rem 13rem auto;
-  }
-  .hotelcard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
-  }
-  .hotelcard2 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .hotelcard3 {
-    grid-row: 4/4;
-    grid-column: 2/2;
-  }
-  .hotelcard4 {
-    grid-row: 5/5;
-    grid-column: 2/2;
-  }
-  .hotelcard5 {
-    grid-row: 6/6;
-    grid-column: 2/2;
-  }
-  .hotelcard6 {
-    grid-row: 7/7;
-    grid-column: 2/2;
-  }
-
-  .héberg_bouton {
+  .hostingPopularTitle {
     grid-column: 1/-1;
-    grid-row: 8/8;
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-bottom: 7%;
-    margin-left: 5%;
   }
+}
+@media (max-width: 1100px) {
+  .hostingPopular {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto repeat(3, 9.5rem);
+  }
+}
 
   /*Populaires*/
-  .populaires {
-    row-gap: 2rem;
-    column-gap: 1rem;
-  }
-  .entete {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-bottom: 0px;
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-  .entete .fas {
-    font-size: 20px;
-  }
-  .populaires {
-    background-color: #f2f2f2;
-    width: 100%;
-    height: auto;
-    border-radius: 0;
-    margin: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .populairescard {
-    margin: 0;
-  }
-  .populaires {
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto 11rem 11rem 11rem auto;
-  }
-  .populairescard1 {
-    grid-row: 2/2;
-    grid-column: 2/2;
-  }
-  .populairescard2 {
-    grid-row: 3/3;
-    grid-column: 2/2;
-  }
-  .populairescard3 {
-    grid-row: 4/4;
-    grid-column: 2/2;
-  }
+
+  /*A FAIREEEEEE*/
+
   /*Activités*/
   .activityCard {
     box-shadow: 0 0 10px #0000002e;
